tests/ucc/type/bad/int-vs-struct-member.c
int main(void)
{
    int a;

    a.b = 0;

    return 0;
}
